--- a/clase3.ipynb
+++ b/clase3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.xlsx')"
+    "df = pd.read_excel('./data/titanic.xlsx')"
    ]
   },
   {
