--- a/clase2.ipynb
+++ b/clase2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "'2.2.3'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,21 +49,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting openpyxl\n",
-      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
-      "Collecting et-xmlfile (from openpyxl)\n",
-      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
-      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
-      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n",
+      "Requirement already satisfied: openpyxl in c:\\users\\hp\\documents\\curso-pandas\\venv\\lib\\site-packages (3.1.5)\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\hp\\documents\\curso-pandas\\venv\\lib\\site-packages (from openpyxl) (2.0.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -83,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -355,19 +349,19 @@
        "[891 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Comenzar desde la columna 3\n",
-    "pd.read_excel('C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.xlsx', index_col=3)"
+    "pd.read_excel('./data/titanic.xlsx', index_col=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -607,20 +601,20 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Puedes utilizar cualquiera\n",
-    "pd.read_csv('C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.csv', delimiter=';')\n",
+    "pd.read_csv('./data/titanic.csv', delimiter=';')\n",
     "# pd.read_csv('C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.csv', sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -860,42 +854,25 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.txt', delimiter=';')"
+    "pd.read_csv('./data/titanic.txt', delimiter=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting lxml\n",
-      "  Downloading lxml-5.3.1-cp312-cp312-win_amd64.whl.metadata (3.8 kB)\n",
-      "Downloading lxml-5.3.1-cp312-cp312-win_amd64.whl (3.8 MB)\n",
-      "   ---------------------------------------- 0.0/3.8 MB ? eta -:--:--\n",
-      "   -- ------------------------------------- 0.3/3.8 MB ? eta -:--:--\n",
-      "   -------- ------------------------------- 0.8/3.8 MB 2.1 MB/s eta 0:00:02\n",
-      "   ------------- -------------------------- 1.3/3.8 MB 2.4 MB/s eta 0:00:02\n",
-      "   ------------------- -------------------- 1.8/3.8 MB 2.5 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 2.1/3.8 MB 2.4 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 2.1/3.8 MB 2.4 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 2.4/3.8 MB 1.7 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 2.4/3.8 MB 1.7 MB/s eta 0:00:01\n",
-      "   --------------------------- ------------ 2.6/3.8 MB 1.5 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 3.1/3.8 MB 1.5 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 3.7/3.8 MB 1.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 3.8/3.8 MB 1.6 MB/s eta 0:00:00\n",
-      "Installing collected packages: lxml\n",
-      "Successfully installed lxml-5.3.1\n",
+      "Requirement already satisfied: lxml in c:\\users\\hp\\documents\\curso-pandas\\venv\\lib\\site-packages (5.3.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -915,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -963,18 +940,18 @@
        " [891 rows x 12 columns]]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_html('C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.html')"
+    "pd.read_html('./data/titanic.html')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1018,7 @@
        " 0  Control de autoridades  Proyectos Wikimedia  Datos: Q2179958  Multimed...]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1276,7 @@
        "25     NaN          Total         196       1891"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1418,13 +1395,13 @@
        "2           0  STON/O2. 3101282    7.93    NaN         S  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.csv', delimiter=';', nrows=3)"
+    "pd.read_csv('./data/titanic.csv', delimiter=';', nrows=3)"
    ]
   },
   {
@@ -1436,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1554,14 +1531,14 @@
        "[891 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_csv(\n",
-    "    'C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.csv', \n",
+    "    './data/titanic.csv', \n",
     "    delimiter=';', \n",
     "    usecols=[\"Survived\", \"Nombre\", \"Sexo\"]\n",
     ")"
@@ -1576,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1803,14 +1780,14 @@
        "[888 rows x 11 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_csv(\n",
-    "    'C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.csv', \n",
+    "    './data/titanic.csv', \n",
     "    delimiter=';', \n",
     "    skiprows=3\n",
     ")"
@@ -1825,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2052,14 +2029,14 @@
        "[890 rows x 11 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_excel(\n",
-    "    'C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.xlsx',\n",
+    "    './data/titanic.xlsx',\n",
     "    sheet_name=\"Pasajeros_2\")"
    ]
   },
@@ -2073,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2313,14 +2290,14 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_excel(\n",
-    "    'C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.xlsx',\n",
+    "    './data/titanic.xlsx',\n",
     "    sheet_name=\"Pasajeros_2\",\n",
     "    header=None,\n",
     "    names=[\"Id_Pasajero\", \"Survived\", \"Clase\", \"Nombre\", \"Sexo\", \"Edad\", \"Familiares\", \n",
@@ -2339,18 +2316,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_titanic = pd.read_excel(\n",
-    "    'C:/Users/HP/Documents/curso-pandas/archivos_clase2/titanic.xlsx'\n",
+    "    './data/titanic.xlsx'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2361,7 +2338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2372,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2383,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2400,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2409,7 +2386,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2421,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2407,7 @@
        "(891, 11)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2442,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2560,7 +2537,7 @@
        "3           0            113803   53.10   C123         S  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2573,7 +2550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3473,7 +3450,7 @@
        "890           0            370376    7.75          NaN         Q  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
